k8s/linkerd-app/deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-management-api-webflux-ingress
  namespace: linkerd-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /drone-webflux-linkerd(/|$)(.*)
            backend:
              service:
                name: drone-management-api-webflux
                port:
                  number: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: drone-management-api-webflux
  labels:
    app: drone-management-api-webflux
spec:
  ports:
    - port: 9090
      name: http
  type: ClusterIP
  selector:
    app: drone-management-api-webflux
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-management-api-webflux
spec:
  selector:
    matchLabels:
      app: drone-management-api-webflux
  template:
    metadata:
      labels:
        app: drone-management-api-webflux
    spec:
      containers:
        - name: drone-management-api-webflux
          image: drone-management-api-webflux:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9090
---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: postgres-deploy
#  labels:
#    name: postgres-deploy
#    app: drone-management-api-webflux
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      name: postgres-pod
#      app: drone-management-api-webflux
#  template:
#    metadata:
#      name: postgres-pod
#      labels:
#        name: postgres-pod
#        app: drone-management-api-webflux
#    spec:
#      containers:
#        - name: postgres
#          image: postgres
#          ports:
#            - containerPort: 5432
#          env:
#            - name: POSTGRES_USER
#              valueFrom:
#                configMapKeyRef:
#                  name: drone-mg
#                  key: postgres_user
#            - name: POSTGRES_HOST
#              valueFrom:
#                configMapKeyRef:
#                  name: drone-mg
#                  key: postgres_host
#            - name: POSTGRES_PORT
#              valueFrom:
#                configMapKeyRef:
#                  name: drone-mg
#                  key: postgres_port
#            - name: POSTGRES_DATABASE
#              valueFrom:
#                configMapKeyRef:
#                  name: drone-mg
#                  key: postgres_database
#            - name: POSTGRES_PASSWORD
#              valueFrom:
#                secretKeyRef:
#                  name: drone-mg
#                  key: postgres_password
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: db
#  labels:
#    name: postgres-service
#    app: drone-management-api-webflux
#spec:
#  ports:
#    - port: 5432
#      targetPort: 5432
#  selector:
#    name: postgres-pod
#    app: drone-management-api-webflux
